Adionando campo de email

--- a/site.html
+++ b/site.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h2>Estou etendendo o git & github</h2>
+    <hr>
+    <input type="email" name="" id="" placeholder="@gmail.com">
 </body>
 </html>
